Fix z-index for menu-container

--- a/css/main.css
+++ b/css/main.css
@@ -643,7 +643,7 @@ button {
   height: 100vh;
   padding: 24px 20px;
   background-color: #fff;
-  z-index: 999;
+  z-index: 9999;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
